IGNITE-16654 add an ability to compare entry values in meta storage conditional updates