@@ -18,6 +18,7 @@
 package org.apache.ignite.internal.metastorage.client;
 
 import static java.util.stream.Collectors.toList;
+import static org.apache.ignite.internal.metastorage.client.CompoundCondition.and;
 import static org.apache.ignite.internal.metastorage.client.CompoundCondition.or;
 import static org.apache.ignite.internal.metastorage.client.Conditions.revision;
 import static org.apache.ignite.internal.metastorage.client.Conditions.value;
@@ -48,6 +49,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -63,6 +65,7 @@ import java.util.stream.Collectors;
 import org.apache.ignite.internal.metastorage.common.OperationType;
 import org.apache.ignite.internal.metastorage.server.AbstractCompoundCondition;
 import org.apache.ignite.internal.metastorage.server.AbstractSimpleCondition;
+import org.apache.ignite.internal.metastorage.server.AndCondition;
 import org.apache.ignite.internal.metastorage.server.EntryEvent;
 import org.apache.ignite.internal.metastorage.server.KeyValueStorage;
 import org.apache.ignite.internal.metastorage.server.OrCondition;
@@ -811,7 +814,7 @@ public class ItMetaStorageServiceTest {
         assertThat(resultIf.andThen().iif().cond(), cond(new RevisionCondition(RevisionCondition.Type.EQUAL, key3.bytes(), 3)));
 
         assertThat(resultIf.andThen().iif().andThen().update(), upd(new Update(
-                Arrays.asList(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key1.bytes(), rval1)),
+                List.of(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key1.bytes(), rval1)),
                 new StatementResult(true))));
 
         assertThat(resultIf.andThen().iif().orElse().update(), upd(new Update(
@@ -820,7 +823,79 @@ public class ItMetaStorageServiceTest {
                 new StatementResult(false))));
 
         assertThat(resultIf.orElse().update(), upd(new Update(
-                Arrays.asList(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key2.bytes(), rval2)),
+                List.of(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key2.bytes(), rval2)),
+                new StatementResult(false))));
+    }
+
+    @Test
+    public void testMultiInvokeValueConditions() throws Exception {
+        ByteArray key1 = new ByteArray(new byte[]{1});
+        ByteArray key2 = new ByteArray(new byte[]{2});
+
+        var val1 = new byte[]{4};
+        var val2 = new byte[]{5};
+
+        var rval1 = new byte[]{6};
+        var rval2 = new byte[]{7};
+
+        /*
+        if (key1.value == val1 || key2.value != val2)
+            if (key2.value > val1 || key1.value >= val2):
+                put(key1, rval1)
+                return true
+            else
+                if (key2.value < val1 && key1.value <= val2):
+                    put(key1, rval1)
+                    remove(key2, rval2)
+                    return false
+                else
+                    return true
+        else
+            put(key2, rval2)
+            return false
+         */
+
+        var iif = If.iif(or(value(key1).eq(val1), value(key2).ne(val2)),
+                            iif(or(value(key2).gt(val1), value(key1).ge(val2)),
+                                ops(put(key1, rval1)).yield(true),
+                                iif(and(value(key2).lt(val1), value(key1).le(val2)),
+                                    ops(put(key1, rval1), remove(key2)).yield(false),
+                                    ops().yield(true))),
+                        ops(put(key2, rval2)).yield(false));
+
+        var ifCaptor = ArgumentCaptor.forClass(org.apache.ignite.internal.metastorage.server.If.class);
+
+        when(mockStorage.invoke(any())).thenReturn(new StatementResult(true));
+
+        assertTrue(metaStorageSvc.invoke(iif).get().getAsBoolean());
+
+        verify(mockStorage).invoke(ifCaptor.capture());
+
+        var resultIf = ifCaptor.getValue();
+
+        assertThat(resultIf.cond(), cond(new OrCondition(new ValueCondition(Type.EQUAL, key1.bytes(), val1),
+                new ValueCondition(Type.NOT_EQUAL, key2.bytes(), val2))));
+
+        assertThat(resultIf.andThen().iif().cond(),
+                cond(new OrCondition(new ValueCondition(ValueCondition.Type.GREATER, key2.bytes(), val1), new ValueCondition(
+                        Type.GREATER_OR_EQUAL, key1.bytes(), val2))));
+        assertThat(resultIf.andThen().iif().orElse().iif().cond(),
+                cond(new AndCondition(new ValueCondition(ValueCondition.Type.LESS, key2.bytes(), val1), new ValueCondition(
+                        Type.LESS_OR_EQUAL, key1.bytes(), val2))));
+
+        assertThat(resultIf.andThen().iif().andThen().update(), upd(new Update(
+                List.of(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key1.bytes(), rval1)),
+                new StatementResult(true))));
+
+        assertThat(resultIf.andThen().iif().orElse().iif().andThen().update(), upd(new Update(
+                Arrays.asList(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key1.bytes(), rval1),
+                        new org.apache.ignite.internal.metastorage.server.Operation(OperationType.REMOVE, key2.bytes(), null)),
+                new StatementResult(false))));
+
+        assertThat(resultIf.andThen().iif().orElse().iif().orElse().update(), upd(new Update(Collections.emptyList(), new StatementResult(true))));
+
+        assertThat(resultIf.orElse().update(), upd(new Update(
+                List.of(new org.apache.ignite.internal.metastorage.server.Operation(OperationType.PUT, key2.bytes(), rval2)),
                 new StatementResult(false))));
     }
 
